...
                                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="80" id="Kf4-BO-qWj"/>
                                                            <constraint firstAttribute="width" constant="170" id="NYJ-9X-jkc"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="30"/>
                                                        <state key="normal" title="AC">
                                                            <color key="titleColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="roundButton" value="YES"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
